--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" href="assets/icon.png" type="favicon.ico">
+    <link rel="icon" href="assets/favicon.ico" type="favicon.ico">
     <script src="js/index.js" defer></script>
 </head>
 
